@@ -46,7 +46,7 @@
     <property name="default_width">600</property>
     <property name="default_height">403</property>
     <property name="destroy_with_parent">True</property>
-    <property name="hide_titlebar_when_maximized">True</property>
+    <property name="icon">images/UXB.gif</property>
     <signal name="destroy" handler="on_window_destroy" swapped="no"/>
     <signal name="check-resize" handler="on_window_check_resize" swapped="no"/>
     <child>
@@ -137,7 +137,6 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
-                <property name="yalign">0.50999999046325684</property>
                 <signal name="toggled" handler="on_pbcButton_toggled" swapped="no"/>
                 <child>
                   <placeholder/>
@@ -158,7 +157,6 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
-                <property name="xalign">0.50999999046325684</property>
                 <signal name="clicked" handler="on_resetButton_clicked" swapped="no"/>
                 <child>
                   <placeholder/>
@@ -183,8 +181,8 @@
           <object class="GtkScrolledWindow" id="gridContainer">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">always</property>
-            <property name="vscrollbar_policy">always</property>
+            <property name="hscrollbar_policy">never</property>
+            <property name="vscrollbar_policy">never</property>
             <child>
               <placeholder/>
             </child>
@@ -204,7 +202,8 @@
               <object class="GtkButton" id="exposedIcon">
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="sensitive">False</property>
+                <property name="can_focus">False</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
                 <property name="focus_on_click">False</property>
@@ -258,7 +257,8 @@
               <object class="GtkButton" id="hintIcon">
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="sensitive">False</property>
+                <property name="can_focus">False</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
                 <property name="focus_on_click">False</property>
@@ -298,7 +298,8 @@
               <object class="GtkButton" id="flagIcon">
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="sensitive">False</property>
+                <property name="can_focus">False</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
                 <property name="focus_on_click">False</property>
